<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/DialogContainer">

    <RelativeLayout style="@style/uphold_confirmation_dialog_currency_row"
        android:layout_marginTop="@dimen/list_entry_padding">

        <org.dash.wallet.common.ui.CurrencyTextView
            android:id="@+id/uphold_withdrawal_amount"
            tools:text="0.00"
            style="@style/uphold_confirmation_dialog_currency_text" />

        <ImageView
            android:id="@+id/uphold_withdrawal_amount_icon"
            android:src="@drawable/ic_dash_d_white_bottom"
            android:layout_toLeftOf="@id/uphold_withdrawal_amount"
            android:layout_toStartOf="@id/uphold_withdrawal_amount"
            style="@style/uphold_confirmation_dialog_currency_icon" />

        <TextView
            android:text="@string/uphold_withdrawal_amount"
            android:layout_toLeftOf="@id/uphold_withdrawal_amount_icon"
            android:layout_toStartOf="@id/uphold_withdrawal_amount_icon"
            style="@style/uphold_confirmation_dialog_currency_label" />

    </RelativeLayout>

    <RelativeLayout style="@style/uphold_confirmation_dialog_currency_row">

        <org.dash.wallet.common.ui.CurrencyTextView
            android:id="@+id/uphold_withdrawal_fee"
            tools:text="0.00"
            style="@style/uphold_confirmation_dialog_currency_text" />

        <ImageView
            android:id="@+id/uphold_withdrawal_fee_icon"
            android:src="@drawable/ic_dash_d_white_bottom"
            android:layout_toStartOf="@id/uphold_withdrawal_fee"
            android:layout_toLeftOf="@id/uphold_withdrawal_fee"
            style="@style/uphold_confirmation_dialog_currency_icon" />

        <TextView
            android:layout_toStartOf="@id/uphold_withdrawal_fee_icon"
            android:layout_toLeftOf="@id/uphold_withdrawal_fee_icon"
            android:text="@string/uphold_withdrawal_fee"
            style="@style/uphold_confirmation_dialog_currency_label" />

    </RelativeLayout>

    <RelativeLayout style="@style/uphold_confirmation_dialog_currency_row"
        android:layout_marginBottom="20dp">

        <org.dash.wallet.common.ui.CurrencyTextView
            android:id="@+id/uphold_withdrawal_total"
            tools:text="0.00"
            style="@style/uphold_confirmation_dialog_currency_text" />

        <ImageView
            android:id="@+id/uphold_withdrawal_total_icon"
            android:src="@drawable/ic_dash_d_white_bottom"
            android:layout_toStartOf="@id/uphold_withdrawal_total"
            android:layout_toLeftOf="@id/uphold_withdrawal_total"
            style="@style/uphold_confirmation_dialog_currency_icon" />

        <TextView
            android:text="@string/uphold_withdrawal_total"
            android:layout_toStartOf="@id/uphold_withdrawal_total_icon"
            android:layout_toLeftOf="@id/uphold_withdrawal_total_icon"
            style="@style/uphold_confirmation_dialog_currency_label" />

    </RelativeLayout>

    <TextView
        android:id="@+id/uphold_withdrawal_confirmation_fee_deduction_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uphold_withdrawal_deduct_fee_disclaimer"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>