<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingDefaultResource">

        <ImageView
            android:id="@+id/uphold_logo"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="141dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="36dp"
            android:src="@drawable/uphold_logo"/>

        <LinearLayout
            android:id="@+id/uphold_buy_dash_text"
            android:gravity="bottom"
            android:layout_below="@id/uphold_logo"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_buy_dash"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uphold_buy_dash_with_uphold"
                style="@style/MontserratMedium.DB.14"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="bottom"
            android:layout_below="@id/uphold_buy_dash_text"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/uphold_buy_dash_text"
            android:layout_alignLeft="@id/uphold_buy_dash_text"
            android:layout_marginBottom="24dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_transfer"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uphold_transfer_to_this_wallet"
                style="@style/MontserratMedium.DB.14"/>

        </LinearLayout>

        <Button
            android:id="@+id/uphold_link_account"
            style="@style/DashButton.Blue"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uphold_link_account"
            android:layout_margin="16dp" />

    </RelativeLayout>

</LinearLayout>